--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,6 @@ jobs:
      - run: |
          echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_USERNAME --password-stdin
 
-     - run: docker build -t saikatharryc/api-base:$CIRCLE_BRANCH . --net=host
+     - run: docker build -t saikatharryc/api-base:$CIRCLE_BRANCH .
 
      - run: docker push saikatharryc/api-base:$CIRCLE_BRANCH
